implement Label in MainPage

--- a/TextBoxGenerationTool/TextBoxGenerationTool/Pages/TextBoxPage.xaml
+++ b/TextBoxGenerationTool/TextBoxGenerationTool/Pages/TextBoxPage.xaml
@@ -257,7 +257,7 @@
                 Grid.Column="0"
                 Grid.ColumnSpan="2"
                 HorizontalOptions="FillAndExpand"
-                Command="{Binding OpenTextPageCommand}"
+                Command="{Binding ClosePageCommand}"
                 Padding="10"
                 Text="Place Text"/>
         </Grid>
