--- a/TextBoxGenerationTool/TextBoxGenerationTool/Pages/MainPage.xaml
+++ b/TextBoxGenerationTool/TextBoxGenerationTool/Pages/MainPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:custom="clr-namespace:TextBoxGenerationTool.CustomControls;assembly=TextBoxGenerationTool"
              x:Class="TextBoxGenerationTool.Pages.MainPage">
     <ScrollView VerticalOptions="StartAndExpand">
         <Grid Padding="20">
@@ -32,6 +33,20 @@
                 Padding="10"
                 Margin="10"
                 Text="Url"/>
+            <custom:CustomLabel 
+                Grid.Row="1"
+                Grid.Column="0"
+                Grid.ColumnSpan="2"
+                Margin="0,10,0,20"
+                x:Name="InputText"
+                Text="{Binding InputText}"
+                TextColor="{Binding TextColor}"
+                FontSize="{Binding FontSize}"
+                BackgroundColor="{Binding BackgroundColor}"
+                BorderColor="{Binding BorderColor}"
+                BorderThickness="{Binding BorderSize}"
+                ShadowSize="{Binding ShadowSize}"
+                FontFamily="{Binding SelectedFont, Converter={StaticResource FontConverter}}"/>
         </Grid>
     </ScrollView>
 </ContentPage>
