--- a/TextBoxGenerationTool/TextBoxGenerationTool/Pages/MainPage.xaml
+++ b/TextBoxGenerationTool/TextBoxGenerationTool/Pages/MainPage.xaml
@@ -3,15 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:custom="clr-namespace:TextBoxGenerationTool.CustomControls;assembly=TextBoxGenerationTool"
              x:Class="TextBoxGenerationTool.Pages.MainPage">
-    <ScrollView VerticalOptions="StartAndExpand">
+    <ScrollView VerticalOptions="Fill">
         <Grid Padding="20">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
@@ -33,20 +31,32 @@
                 Padding="10"
                 Margin="10"
                 Text="Url"/>
-            <custom:CustomLabel 
+            <custom:CustomFrame       
                 Grid.Row="1"
                 Grid.Column="0"
                 Grid.ColumnSpan="2"
                 Margin="0,10,0,20"
-                x:Name="InputText"
-                Text="{Binding InputText}"
-                TextColor="{Binding TextColor}"
-                FontSize="{Binding FontSize}"
+                HasShadow="True"
+                HorizontalOptions="FillAndExpand"
+                VerticalOptions="StartAndExpand"
+                Padding="0"
+                IsVisible="{Binding TextVisible}"
                 BackgroundColor="{Binding BackgroundColor}"
-                BorderColor="{Binding BorderColor}"
-                BorderThickness="{Binding BorderSize}"
                 ShadowSize="{Binding ShadowSize}"
-                FontFamily="{Binding SelectedFont, Converter={StaticResource FontConverter}}"/>
+                CornerRadius="0">
+                <custom:CustomEditor 
+                    AutoSize="TextChanges"   
+                    HorizontalOptions="Fill"
+                    VerticalOptions="Start"
+                    InputTransparent="True"
+                    Text="{Binding InputText}"
+                    TextColor="{Binding TextColor}"
+                    FontSize="{Binding FontSize}"
+                    BackgroundColor="{Binding BackgroundColor}"
+                    BorderColor="{Binding BorderColor}"
+                    BorderThickness="{Binding BorderSize}"
+                    FontFamily="{Binding SelectedFont}"/>
+            </custom:CustomFrame>
         </Grid>
     </ScrollView>
 </ContentPage>
